# athorrent-backend

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  Makefile.linux  Makefile.win32  README.md  bootstrap  bootstrap.sh  build.sh  configure.ac  install-deps.sh
.circleci/: config.yml
.github/workflows/: ci.yml
include/: AbstractClientSocket.h  AbstractServerSocket.h  AbstractSocket.h  AlertManager.h  AthorrentService.h  BadJsonRequestException.h  Json.h  JsonClient.h  JsonRequest.h  JsonRequestFailedException.h  JsonResponse.h  JsonServer.h  LocalClientSocket.h  LocalServerSocket.h  LocalSocket.h  ResumeDataManager.h  TorrentManager.h  Utils.h
include/linux/: LocalClientSocket.h  LocalServerSocket.h  LocalSocket.h
include/win32/: LocalClientSocket.h  LocalServerSocket.h  LocalSocket.h
m4/: ax_boost_stacktrace.m4
src/: AlertManager.cpp  AthorrentService.cpp  BadJsonRequestException.cpp  JsonClient.cpp  JsonRequest.cpp  JsonRequestFailedException.cpp  JsonResponse.cpp  JsonServer.cpp  LocalClientSocket.cpp  LocalServerSocket.cpp  LocalSocket.cpp  Makefile.am  ResumeDataManager.cpp  TorrentManager.cpp  Utils.cpp  main.cpp
src/linux/: LocalClientSocket.cpp  LocalServerSocket.cpp  LocalSocket.cpp
src/win32/: LocalClientSocket.cpp  LocalServerSocket.cpp  LocalSocket.cpp
